<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SDN Controller</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Preference Settings</string>
    <string name="sdn_control_switch_message">SDN Controlling</string>
    <string name="introduction">This App is designed for EIT SDN test</string>
    <string name="wifi_scan_switch_message">WiFi Scanning</string>
    <string name="button_download_summary">Download a file</string>
    <string name="button_download">start</string>

    <string name="pref_sdn_controlling">SDN Controlling</string>
    <string name="pref_wifi_scanning">WiFi Scanning</string>


    <string name="pref_recv_udp_port">UDP Listening Port (1024~65535)</string>
    <string name="pref_recv_udp_port_sum">7755</string>
    <string name="dialog_title_recv_udp_port">Enter your port number</string>
    
    <string name="pref_downloading_url">Downloading File URL</string>
    <string name="pref_downloading_url_hint">http://</string>
    <string name="pref_downloading_url_sum">http://192.168.0.1/files/small.tmp</string>
    <string name="dialog_title_pref_downloading_url">Enter your URL</string>

    <string name="pref_client_detection">Client Traffic Detection</string>
    <string name="pref_client_detection_sum">Enable/disable client traffic detection</string>
    
    <string name="pref_motion_detection">Device Motion Detection</string>
    <string name="pref_motion_detection_sum">Enable/disable motion detection</string>

    <string name="pref_wifi_scan_interval_sum">10s</string>
    <string name="pref_wifi_scan_interval">WiFi Scanning Interval</string>

    <string name="pref_connecting_test">Enable Connecting Test</string>
    <string name="pref_connecting_test_sum">Enable/disable connecting test</string>
    <string name="pref_connecting_test_timeout_sum">2000ms</string>
    <string name="pref_connecting_test_timeout">WiFi Connectiong Test Timeout</string>


</resources>
