<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <TextView
        android:id="@+id/introduction"
        android:layout_margin="10sp"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:text="@string/introduction" />

    <Switch
        android:id="@+id/switch_sdn"
        style="?android:attr/listSeparatorTextViewStyle"
        android:checked="false"
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/introduction"
        android:text="@string/sdn_control_switch_message"
        android:onClick="onSwitchSDNClicked" />

     <Switch
        android:id="@+id/switch_wifi_scan"
        style="?android:attr/listSeparatorTextViewStyle"
        android:checked="false"
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/switch_sdn"
        android:text="@string/wifi_scan_switch_message"
        android:onClick="onSwitchWifiScanClicked" />

     <TextView
        android:id="@+id/button_download_introduction"
        android:textSize="15sp"
        android:layout_margin="10sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_download_summary"
        android:layout_below="@id/switch_wifi_scan"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/button_download"/>

     <Button android:id="@+id/button_download"
        android:layout_margin="10sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_download"
        android:layout_below="@id/switch_wifi_scan"
        android:layout_alignParentRight="true"
        android:onClick="controlDownload" />

</RelativeLayout>
